# backtrader_2_modular

./: .gitignore  README.md  pyproject.toml
config/data_sources/: credit_data.yaml  market_data.yaml
docs/AI Instructions/: LSTM.md  ml.md  notes.md
general_notes/: backtesting.md
pulling_data/: data_fetcher.py
src/: __init__.py
src/data/: fetch_data.py
src/data/fetchers/: base.py  market_data_fetcher.py
src/utils/bloomberg/: bloomberg_utils.py
src/utils/data/: merger.py  transformations.py
src/utils/metrics/: metrics.py
utils/: bloomberg_utils.py  csv_exporter.py  merge_utils.py  trans_utils.py
